--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-        <title>Send Token App </title>
+        <title>Request and Send your Tokens</title>
     </head>
     <body>
         <noscript>
